--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "compile": "tsc -w"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +18,9 @@
     "@google/generative-ai": "^0.21.0",
     "dotenv": "^16.4.5",
     "googleapis": "^105.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^22.7.9",
+    "ts-node": "^10.9.2"
   }
 }
